[gd_scene load_steps=7 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://PackgeScene/AstarMoviment.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/Ally.gd" type="Script" id=3]
[ext_resource path="res://PackgeScene/LifeSystem.tscn" type="PackedScene" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 6.0

[sub_resource type="CircleShape2D" id=2]
radius = 115.156

[node name="Ally" type="KinematicBody2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
self_modulate = Color( 0, 1, 0.0156863, 1 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 1 )

[node name="AstarMoviment" parent="." instance=ExtResource( 2 )]

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Arm" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( -2.125, 2 )
scale = Vector2( 0.0664063, 0.0625 )
texture = ExtResource( 1 )

[node name="Weapon" type="Sprite" parent="Arm"]
position = Vector2( 107.294, 0 )
scale = Vector2( 3.58824, 0.5 )
texture = ExtResource( 1 )

[node name="Spaw" type="Position2D" parent="Arm"]
position = Vector2( 212, 0 )
rotation = 1.5708

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="View" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="View"]
shape = SubResource( 2 )

[node name="ShotTime" type="Timer" parent="."]

[node name="LifeSystem" parent="." instance=ExtResource( 4 )]
position = Vector2( 0, 8 )

[node name="AttackPoints" type="Node2D" parent="."]

[node name="Position2D" type="Position2D" parent="AttackPoints"]
position = Vector2( 12, 0 )

[node name="Position2D2" type="Position2D" parent="AttackPoints"]
position = Vector2( 0, 11 )

[node name="Position2D3" type="Position2D" parent="AttackPoints"]
position = Vector2( -14, 0 )

[node name="Position2D4" type="Position2D" parent="AttackPoints"]
position = Vector2( 0, -13 )

[connection signal="on_position" from="AstarMoviment" to="." method="_on_AstarMoviment_on_position"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="View" to="." method="_on_View_body_entered"]
[connection signal="timeout" from="ShotTime" to="." method="_on_ShotTime_timeout"]
[connection signal="dead" from="LifeSystem" to="." method="_on_LifeSystem_dead"]
